--- a/.github/workflows/Auto_sign.yml
+++ b/.github/workflows/Auto_sign.yml
@@ -12,6 +12,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7.2'
+          cache: 'pip'
       - name: requirements
         run: |
           python -m pip install --upgrade pip
